# rusqlite-from-row

./: Cargo.toml  README.md
rusqlite-from-row-derive/: Cargo.toml
rusqlite-from-row-derive/src/: lib.rs
src/: lib.rs
tests/: integration.rs
